--- a/frontend/src/views/dashboard/myProjects/myProjects.css
+++ b/frontend/src/views/dashboard/myProjects/myProjects.css
@@ -1,3 +1,17 @@
 div.my-projects-view {
     flex: 1;
 }
+
+div.projects-main-div {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+div.project-card {
+    border-radius: 10px;
+    box-shadow: 0px 0px 5px 0.5px;
+    margin: 10px;
+    padding: 10px;
+    background-color: blanchedalmond;
+}
