--- a/frontend/src/views/dashboard/myProjects/myProjects.css
+++ b/frontend/src/views/dashboard/myProjects/myProjects.css
@@ -13,5 +13,6 @@ div.project-card {
     box-shadow: 0px 0px 5px 0.5px;
     margin: 10px;
     padding: 10px;
+    max-width: 50%;
     background-color: blanchedalmond;
 }
