--- a/frontend/src/views/dashboard/projectTab/projectTab.css
+++ b/frontend/src/views/dashboard/projectTab/projectTab.css
@@ -1,8 +1,77 @@
+div.project-view {
+    height: 100vh;
+}
+
 div.project-main {
     margin-left: 100px;
     display: flex;
     flex-direction: column;
 }
+
+/* delete project pop up */
+
+div.confirm-delete-project {
+    display: flex;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+    backdrop-filter: blur(5px);
+}
+
+div.confirm-delete-project-box {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    width: 300px;
+    height: 200px;
+    padding: 20px;
+    background-color: rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 0px 10px 0.5px rgba(0, 0, 0, 0.2);
+    justify-content: center;
+}
+
+div.confirm-delete-project-box > span {
+    font-size: 14pt;
+    font-weight: bold;
+}
+
+div.confirmation-on-delete-project {
+    display: flex;
+    margin-top: 20px;
+    justify-content: space-around;
+}
+
+button.delete-project-for-sure, button.cancel-delete-project {
+    margin: auto;
+    width: 100px;
+    padding: 5px;
+    font-size: 13pt;
+    font-weight: bold;
+    letter-spacing: 1px;
+    background-color: rgba(0, 0, 0, 1);
+    color: rgba(255, 255, 255, 0.7);
+    border: solid 2pt rgba(255, 255, 255, 0.9);
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
+    cursor: pointer;
+}
+
+button.delete-project-for-sure:hover {
+    background-color: rgba(185, 0, 0, 0.9);
+    color: rgba(255, 255, 255, 0.9);
+}
+
+button.cancel-delete-project:hover {
+    background-color: rgba(0, 185, 0, 0.9);
+    color: rgba(255, 255, 255, 0.9);
+}
+
+button.delete-project-for-sure:active, button.cancel-delete-project:active {
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.4);
+}
+
+/*  */
 
 /* Add task pop up */
 
@@ -98,13 +167,12 @@ button.submit-task-details {
 }
 
 button.submit-task-details:hover {
-    background-color: rgba(0, 0, 0, 0.5);
-    /* color: rgba(255, 255, 255, 0.5); */
+    background-color: rgba(0, 0, 185, 0.9);
+    color: rgba(255, 255, 255, 0.9);
 }
 
-button.submit-task-details:hover {
-    background-color: rgba(0, 0, 0, 0.5);
-    /* color: rgba(255, 255, 255, 0.5); */
+button.submit-task-details:active {
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.4);
 }
 
 /*  */
@@ -129,6 +197,27 @@ div.project-overview-header > div.project-title {
     font-size: 25pt;
     font-weight: bolder;
     margin-left: 17px;
+    display: flex;
+    align-items: baseline;
+    cursor: pointer;
+}
+
+div.project-title > div.delete-project {
+    display: flex;
+    width: 1px;
+    height: 1px;
+    margin-left: 50px;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+}
+
+div.project-title > div.delete-project:hover {
+    box-shadow: 0px 0px 20px 20px rgba(0, 0, 0, 0.3);
+}
+
+div.project-title > div.delete-project:active {
+    transform: scale(1.15);
 }
 
 div.project-overview-header > div.add-task {
@@ -141,6 +230,7 @@ div.project-overview-header > div.add-task {
     box-shadow: 0px 0px 10px 0.5px rgba(0, 0, 0, 0.2);
     padding: 1px 15px;
     border-radius: 30px;
+    cursor: pointer;
 }
 
 div.project-overview-header > div.add-task:hover {
@@ -157,15 +247,47 @@ div.project-contribs {
 
 }
 
-div.project-contribs > div.project-admin, div.project-members {
+div.project-contribs > div.project-admin, div.project-members, div.project-status {
     margin: 5px 20px;
     margin-right: 40px;
     padding: 5px 10px;
     border-radius: 10px;
     width: fit-content;
-    background-color: rgba(255, 0, 0, 0.5);
+    background-color: rgba(155, 0, 0, 0.5);
     color: rgba(255, 255, 255, 0.7);
     box-shadow: 0px 0px 10px 0.5px rgba(0, 0, 0, 0.3);
+    font-weight: bold;
+    cursor: pointer;
+}
+
+div.project-status {
+    background-color: rgba(0, 255, 0, 0.5);
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+}
+
+div.project-status:hover {
+    background-color: rgba(0, 255, 0, 0.7);
+    box-shadow: 0px 0px 10px 0.5px rgba(0, 0, 0, 0.4);
+}
+
+div.project-status-to-be-done {
+    background-color: rgba(0, 0, 255, 0.5);
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+}
+
+div.project-status-to-be-done:hover {
+    background-color: rgba(0, 0, 255, 0.7);
+    box-shadow: 0px 0px 10px 0.5px rgba(0, 0, 0, 0.4);
+}
+
+div.project-status-done {
+    background-color: rgba(255, 0, 0, 0.5);
+    text-shadow: 0px 0px 10px rgba(0, 0, 0, 1);
+}
+
+div.project-status-done:hover {
+    background-color: rgba(255, 0, 0, 0.7);
+    box-shadow: 0px 0px 10px 0.5px rgba(0, 0, 0, 0.4);
 }
 
 div.project-members {
@@ -174,7 +296,7 @@ div.project-members {
 }
 
 div.project-contribs > div.project-admin:hover {
-    background-color: rgba(255, 0, 0, 0.6);
+    background-color: rgba(155, 0, 0, 0.7);
     box-shadow: 0px 0px 10px 0.5px rgba(0, 0, 0, 0.4);
 }
 
@@ -198,6 +320,12 @@ div.tasks {
 div.done, div.in-progress, div.to-be-done {
     display: flex;
     flex-direction: column;
+    cursor: pointer;
+}
+
+div.done-list, div.in-progress-list, div.to-be-done-list {
+    overflow-y: scroll;
+    height: 200px;
 }
 
 div.task {
@@ -211,6 +339,7 @@ div.task {
     font-weight: bold;
     background-color: rgba(0, 0, 0, 0.1);
     box-shadow: 0px 0px 10px 0.5px rgba(0, 0, 0, 0.3);
+    cursor: pointer;
 }
 
 div.task:hover {
