--- a/frontend/src/views/signup/signup.css
+++ b/frontend/src/views/signup/signup.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: radial-gradient(rgb(138, 175, 075), rgb(128, 165, 055), rgb(118, 165, 055), rgb(108, 165, 065), rgb(98, 155, 075), rgb(088, 145, 085),rgb(078, 135, 095));
+    /* background: radial-gradient(rgb(138, 175, 075), rgb(128, 165, 055), rgb(118, 165, 055), rgb(108, 165, 065), rgb(98, 155, 075), rgb(088, 145, 085),rgb(078, 135, 095)); */
 }
 .signup-form{
     display: flex;
