--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,6 +7,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   text-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+  background: linear-gradient(rgba(70, 0, 130, 0.7), rgba(100, 137, 238, 0.7));
 }
 
 code {
