--- a/frontend/src/views/dashboard/myProjects/myProjects.css
+++ b/frontend/src/views/dashboard/myProjects/myProjects.css
@@ -1,7 +1,6 @@
 div.main-div {
     height: 100vh;
     background-color: rgba(0, 0, 0, 0.05);
-    overflow-y: scroll;
 }
 
 div.my-projects-main {
@@ -44,6 +43,11 @@ div.cancel-adding-project {
 input.new-project-title {
     margin: 20px;
     padding: 15px;
+    outline: none;
+}
+
+input.new-project-title::placeholder {
+    color: rgba(0, 0, 0, 1);
 }
 
 .title-error {
@@ -63,6 +67,12 @@ textarea.new-project-description {
     background-color: rgba(255, 255, 255, 0.9);
     padding: 10px 15px;
     border: none;
+    outline: none;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
+}
+
+textarea.new-project-description:hover {
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.4);
 }
 
 div.new-project-status-selector {
@@ -72,7 +82,7 @@ div.new-project-status-selector {
 
 span.new-project-status-selector-span {
     font-size: 13pt;
-    color: rgba(0, 0, 0, 0.6);
+    color: rgba(0, 0, 0, 1);
 }
 
 span.status-error {
@@ -85,6 +95,12 @@ select.new-project-status {
     padding: 5px 5px;
     width: 115px;
     border: none;
+    outline: none;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
+}
+
+select.new-project-status:hover {
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.4);
 }
 
 select.status-error {
@@ -109,7 +125,7 @@ button.submit-project-details:hover {
     color: rgba(255, 255, 255, 0.9);
 }
 
-button.submit-project-details:hover {
+button.submit-project-details:active {
     box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.4);
 }
 
