--- a/frontend/src/views/dashboard/sidebar/sidebar.css
+++ b/frontend/src/views/dashboard/sidebar/sidebar.css
@@ -3,9 +3,9 @@ div.sidebar {
     height: 100vh;
     width: 70px;
     flex-direction: column;
-    background-color: rgba(128, 128, 128, 0.7);
+    background-color: rgba(130, 137, 238, 0.7);
     border-right: rgba(128, 128, 128) solid 1px;
-    box-shadow: 2px 1px 10px 1px gray;
+    box-shadow: 2px 1px 10px 1px rgba(0, 0, 0, 0.5);
     -webkit-transition: width 0.7s ease-in-out;
     -moz-transition: width 0.7s ease-in-out;
     -o-transition: width 0.7s ease-in-out;
@@ -18,8 +18,7 @@ div.sidebar {
     align-items: center;
     height: 150px;
     font-size: 16pt;
-    background: linear-gradient(rgba(255, 255, 255), rgba(255, 255, 255), rgba(255, 255, 255), rgba(255, 255, 255),
-    rgba(255, 255, 255), rgba(255, 255, 255), rgba(128, 128, 128, 0.02));
+    background: linear-gradient(rgba(70, 0, 130, 0.5), rgba(130, 137, 238, 0.2));
     white-space: nowrap;
 }
 
@@ -61,7 +60,7 @@ div.sidebar-view-ops {
 }
 
 div.sidebar-view-ops:hover {
-    background-color: rgba(128, 128, 128, 1);
+    background-color: rgba(100, 137, 238, 1);
 }
 
 .sidebar-ops-icon {
