--- a/frontend/src/views/dashboard/taskTab/taskTab.css
+++ b/frontend/src/views/dashboard/taskTab/taskTab.css
@@ -2,6 +2,7 @@ div.task-main {
     margin-left: 100px;
     display: flex;
     flex-direction: column;
+    height: 100vh;
 }
 
 /* delete project pop up */
