username in usersCred table is unique now - Throws user exists if same username tries to signup - bufferring/loading animation has been included between login/signup proceses and myProjects loading process - login/signup/guest buttons has remastered - login/signup inputs has been made a little responsive showing users invalid entries

--- a/frontend/src/views/dashboard/myProjects/myProjects.css
+++ b/frontend/src/views/dashboard/myProjects/myProjects.css
@@ -10,6 +10,21 @@ div.my-projects-main {
     margin-left: 100px; 
 }
 
+div.my-projects-loading {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(5px);
+}
+
+div.my-projects-loading > div.spinner-grow {
+    width: 3rem;
+    height: 3rem;
+}
+
 /* Add project pop up */
 
 div.new-project {
