--- a/frontend/src/views/signup/signup.css
+++ b/frontend/src/views/signup/signup.css
@@ -5,6 +5,24 @@
     align-items: center;
     /* background: radial-gradient(rgb(138, 175, 075), rgb(128, 165, 055), rgb(118, 165, 055), rgb(108, 165, 065), rgb(98, 155, 075), rgb(088, 145, 085),rgb(078, 135, 095)); */
 }
+
+.signup-loading {
+    display: flex;
+    height: 100vh;
+    width: 100vw;
+    position: absolute;
+    justify-content: center;
+    align-items: center;
+    backdrop-filter: blur(5px);
+    z-index: 1000;
+}
+
+.signup-loading > div.spinner-grow {
+    color: azure;
+    width: 3rem;
+    height: 3rem;
+}
+
 .signup-form{
     display: flex;
     flex-direction: column;
@@ -13,7 +31,7 @@
     border-radius: 10px;
     box-shadow: 0px 0px 10px 3px rgba(0, 0, 0, 0.5);
     background: rgba(200, 200, 200, 0.3);
-    padding: 10px 50px;
+    padding: 30px 50px;
 }
 
 input{
@@ -22,6 +40,7 @@ input{
     border: none;
     border-bottom: 2px solid black;
     background: transparent;
+    outline: none;
 }
 
 input::placeholder{
@@ -29,19 +48,26 @@ input::placeholder{
     color:rgb(48, 48, 48);
 }
 
+.fail {
+    border-bottom: 2px solid rgba(205, 0, 0, 1);
+}
+
+.fail::placeholder {
+    color:rgba(205, 0, 0, 1);
+}
+
 .signup-button{
-    margin:10px;
+    margin: 10px;
     position: relative;
-    margin-top: 20px;
-    padding: 8px 10px;
+    margin-top: 40px;
+    padding: 4px 0px;
     width: 100px;
-    border: none;
-    border-radius: 20px;
-    box-shadow: 0px 1px 10px 0.5px;
-    background: #b25235;
+    background: #460766;
     cursor: pointer;
     overflow: hidden;
-    color: black;
+    color: rgba(255, 255, 255, 0.7);
+    border: solid 2pt rgba(255, 255, 255, 0.9);
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
     font-size: 15pt;
 }
 
@@ -53,7 +79,7 @@ input::placeholder{
 .signup-button::before{
     content:'';
     position: absolute;
-    background: #333333;
+    background: #000000;
     left: 50%;
     top: 50%;
     height: 0px;
